Fix stretching in iOS

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -47,7 +47,6 @@
         .sidebar--logo {
             max-width: 160px;
             max-height: 80px;
-            width: 100%;
 
             @media (min-width: 780px) {
                 max-height: none;
